Fix textarea formatting
There was an issue where text entered into the textarea would not retain
the line breaks for a new paragraph.  No matter how many times enter was
hit, it would treat it as a single space.  This was fixed by wrapping
the handlebars output in a pre tag.  CSS for the pre tag has
white-space: pre-wrap; to prevent horizontal scrolling.

Next: actually get update (pages) running

Contributors: J.A.M.S.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -12,4 +12,11 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 #page-header:hover {
   color: #0000FF;
   text-decoration: underline;
+  cursor: pointer;
+  cursor: hand;
+}
+
+.text-body {
+  font-family: "Times New Roman", Times, serif;
+  white-space: pre-wrap;
 }
